--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <td class="column20"></td>
             <td class="column21"></td>
         </tr>
-        <tr class="row10">
+        <tr class="row10 safe-area">
             <td class="column1"></td>
             <td class="column2"></td>
             <td class="column3"></td>
