--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" type="module" defer></script>
-    <style>
+   <!-- <style> 
         @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-    </style>
+        
+    </style> -->
     <title>ESCAPE SOAP</title>
 </head>
 
