safe-area and soap fixed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="container">
             <table id="table">
-                <tr class="row1">
+                <tr class="row1 safe-area">
                     <td class="column1"></td>
                     <td class="column2"></td>
                     <td class="column3"></td>
