--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" type="module" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>ESCAPE SOAP</title>
 </head>
 
 <body>
     <div class="ending hidden">
-        <h1>GAME OVER</h1>
-        <img id="soapgo" src="./img/soap_game_over.png" alt="">
+        <div class="logo">GAME OVER</div>
+        <img id="soapgo-gameover" src="./img/soap_game_over.png"  width="300" height="300">
         <button class="restart">MAIN MENU</button>
     </div>
     <div id="start"></div>    
     <div class="win hidden">
-        <h1>WIN</h1>
-        <img id="soapgo" src="./img/soap_win.png" alt="">
+        <div class="logo">WIN</div>
+        <img id="soapgo-win" src="./img/soap_win.png" width="400" height="400">
         <button class="restart">MAIN MENU</button>
     </div>    
 
